--- a/dev/styles/main.css
+++ b/dev/styles/main.css
@@ -32,7 +32,7 @@
   }
 
   body {
-    @apply bg-slate-50 text-neutral-800 dark:bg-neutral-900 dark:text-neutral-200;
+    @apply bg-gray-50 text-neutral-800 dark:bg-neutral-900 dark:text-neutral-300;
   }
 
   a {
